# telepathy-idle

./: .gitignore  0001-Adapt-for-GVariant-based-tp_group_mixin_change_membe.patch  HACKING  Makefile.am  NEWS  _boring  configure.ac  meson.build  meson_options.txt
data/: Makefile.am  idle.manager  im.telepathy.v1.ConnectionManager.idle.service.in  im.telepathy1.ConnectionManager.idle.service.in  meson.build  org.freedesktop.Telepathy.ConnectionManager.idle.service.in
extensions/: Connection_Interface_IRC_Command1.xml  Connection_Interface_Irc_Command.xml  Connection_Interface_Renaming.xml  Makefile.am  all.xml  extensions.h  meson.build
extensions/_gen/: meson.build
generate/: do_src.sh  do_xml.sh  idle.def
generate/src/: idle-connection-manager.c  idle-connection-manager.h  idle-connection-signals-marshal.list  idle-connection.c  idle-connection.h  idle-im-channel.c  idle-im-channel.h  idle-muc-channel.c  idle-muc-channel.h
generate/xml-modified/: idle-connection-manager.xml  idle-connection.xml  idle-im-channel.xml  idle-muc-channel.xml
generate/xml-pristine/: idle-connection-manager.xml  idle-connection.xml  idle-im-channel.xml  idle-muc-channel.xml
src/: Makefile.am  gheap.c  gheap.h  gintset.c  gintset.h  idle-connection-manager.c  idle-connection-manager.h  idle-connection.c  idle-connection.h  idle-contact-info.c  idle-contact-info.h  idle-ctcp.c  idle-ctcp.h  idle-debug.c  idle-debug.h  idle-dns-resolver.c  idle-dns-resolver.h  idle-handle-set.c  idle-handle-set.h  idle-handles-private.h  idle-handles.c  idle-handles.h  idle-im-channel.c  idle-im-channel.h  idle-im-factory.c  idle-im-factory.h  idle-im-manager.c  idle-im-manager.h  idle-muc-channel-signals-marshal.list  idle-muc-channel.c  idle-muc-channel.h  idle-muc-factory.c  idle-muc-factory.h  idle-muc-manager.c  idle-muc-manager.h  idle-parser.c  idle-parser.h  idle-roomlist-channel.c  idle-roomlist-channel.h  idle-roomlist-manager.c  (+35 more)
tests/: Makefile.am  meson.build  test-ctcp-kill-blingbling.c  test-ctcp-tokenize.c  test-text-encode-and-split.c
tests/twisted/: Makefile.am  config.py.in  constants.py  contacts.py  idletest.py  irc-command.py  meson.build  run-test.sh.in  servicetest.py
tests/twisted/channels/: join-muc-channel-bouncer.py  join-muc-channel.py  muc-channel-topic.py  muc-destroy.py  requests-create.py  requests-muc.py  room-list-channel.py  room-list-multiple.py
tests/twisted/cm/: protocol.py
tests/twisted/connect/: connect-close-ssl.py  connect-fail-ssl.py  connect-fail.py  connect-reject-ssl.py  connect-success-ssl.py  connect-success.py  disconnect-before-socket-connected.py  disconnect-during-cert-verification.py  invalid-nick.py  ping.py  server-quit-ignore.py  server-quit-noclose.py  socket-closed-after-handshake.py  socket-closed-during-handshake.py
tests/twisted/messages/: accept-invalid-nicks.py  contactinfo-request.py  invalid-utf8.py  leading-space.py  long-message-split.py  message-order.py  messages-iface.py  room-config.py  room-contact-mixup.py  split-msg-sent-signal.py
tests/twisted/tools/: Makefile.am  exec-with-log.sh.in  idle.service.in  idletest.cert  idletest.key  meson.build
tests/twisted/tools/installed/: tmp-session-bus.conf.in
tools/: Makefile.am  glib-ginterface-gen.py  libglibcodegen.py
